--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".HomeActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".CircleActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
