--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".SignUpActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".PasswordRecoveryActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
