--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name=".ParseApplication"
@@ -32,9 +34,12 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".CircleActivity"
+            android:name=".CircleDetailActivity"
             android:label="@string/app_name" >
         </activity>
+        <service
+            android:name=".LocationPushService"
+            android:exported="false" />
     </application>
 
 </manifest>
