--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignUpActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".PasswordRecoveryActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name=".HomeActivity"
             android:label="@string/app_name" >
         </activity>
@@ -40,6 +32,9 @@
         <service
             android:name=".LocationPushService"
             android:exported="false" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBKgiId5G7FVQR8YQFRyMVhXuRkVIEhcOk"/>
     </application>
 
 </manifest>
