--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 
     compile 'com.google.android.gms:play-services-location:7.8.0'
 
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
+
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.1'
 }
