--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,19 +32,27 @@ android {
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
 
-    compile 'com.google.android.gms:play-services-location:7.8.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+
+    compile 'com.google.android.gms:play-services-location:8.1.0'
 
     compile 'com.google.maps.android:android-maps-utils:0.4+'
 
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.1'
+    
+    compile project(':ParseUI-Login')
+    compile project(':ParseUI-Widget')
+
+    compile 'com.facebook.android:facebook-android-sdk:4.0.1'
+    // compile files('libs/ParseFacebookUtilsV4-1.10.0.jar')
 }
