--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,14 @@ dependencies {
     compile 'com.google.maps.android:android-maps-utils:0.4+'
 
     compile 'com.parse.bolts:bolts-android:1.2.1'
-    compile 'com.parse:parse-android:1.10.1'
-    
+    compile 'com.parse:parse-android:1.10.3'
+    compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
+
     compile project(':ParseUI-Login')
     compile project(':ParseUI-Widget')
     compile project(':flipCheckBox')
 
-    compile 'com.facebook.android:facebook-android-sdk:4.0.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.4.0'
     // compile files('libs/ParseFacebookUtilsV4-1.10.0.jar')
 
     compile 'de.hdodenhof:circleimageview:2.0.0'
