--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     // compile files('libs/ParseFacebookUtilsV4-1.10.0.jar')
 
     compile 'de.hdodenhof:circleimageview:2.0.0'
+
+    compile 'com.rockerhieu:rv-adapter-endless:1.1'
 }
