Change ViewPagerAdapter to be generic and improve resusability

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,10 @@
                 android:value=".HomeActivity" />
         </activity>
         <activity
+            android:name=".ProfileActivity"
+            android:label="@string/profile">
+        </activity>
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/settings">
             <meta-data
