--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,10 @@ dependencies {
     compile project(':flipCheckBox')
 
     compile 'com.facebook.android:facebook-android-sdk:4.4.0'
-    // compile files('libs/ParseFacebookUtilsV4-1.10.0.jar')
 
     compile 'de.hdodenhof:circleimageview:2.0.0'
 
     compile 'com.rockerhieu:rv-adapter-endless:1.1'
+
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
