--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,13 @@
                 android:value=".HomeActivity" />
         </activity>
         <activity
+            android:name=".EditProfileActivity"
+            android:label="@string/profile">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/settings">
             <meta-data
