Create screen to manage circle and friend invites/requests. Add ability to handle the latter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,13 @@
                 android:value=".HomeActivity" />
         </activity>
         <activity
+            android:name=".InvitesActivity"
+            android:label="@string/invites">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/settings">
             <meta-data
