--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,11 +13,11 @@ buildscript {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.parseapp.vthokiefinder"
-        minSdkVersion 12
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -53,7 +53,6 @@ dependencies {
 
     compile project(':ParseUI-Login')
     compile project(':ParseUI-Widget')
-    compile project(':flipCheckBox')
 
     compile 'com.facebook.android:facebook-android-sdk:4.4.0'
 
@@ -62,4 +61,6 @@ dependencies {
     compile 'com.rockerhieu:rv-adapter-endless:1.1'
 
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    compile 'eu.davidea:flipview:1.1.0'
 }
