--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
-    compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
 
     compile 'com.google.android.gms:play-services-location:8.1.0'
@@ -55,14 +54,10 @@ dependencies {
     compile project(':ParseUI-Login')
 
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
-
     compile 'com.facebook.android:facebook-android-sdk:4.4.0'
-
     compile 'de.hdodenhof:circleimageview:2.0.0'
-
     compile 'com.rockerhieu:rv-adapter-endless:1.1'
-
     compile 'com.github.bumptech.glide:glide:3.6.1'
-
     compile 'eu.davidea:flipview:1.1.0'
+    compile 'com.github.clans:fab:1.6.2'
 }
