--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.3'
     compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
+    compile 'com.parse:parseui-login-android:0.0.1'
+    compile 'com.parse:parseui-widget-android:0.0.1'
 
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
     compile 'com.facebook.android:facebook-android-sdk:4.4.0'
